bynkc/tests/fixtures/negative/491_messages_malformed_icu_selectordinal/src/bundle.bynk
commons bundle

uses bynk.locale

messages en @reference {
  "rank" => "{rank, selectordinal, one {#st} two {#nd} few {#rd} other {#th}}"
}
